fixed bug with z-index background color and background image

--- a/src/app/core/components/register/register.component.scss
+++ b/src/app/core/components/register/register.component.scss
@@ -2,12 +2,19 @@ form {
   box-shadow: 15px 15px 27px #e1e1e3, -15px -15px 27px #ffffff;
   display: flex;
   flex-direction: column;
-  width: 40%;
+  width: 90%;
   margin: auto;
   padding: 1rem;
   border-radius: 10px;
   background-color: white;
-  h1 {
+  h2 {
     text-align: center;
+    margin: 1rem;
+  }
+}
+
+@media (min-width: 768px) {
+  form {
+    max-width: 30%;
   }
 }
