--- a/src/app/core/layout/navbar/navbar.component.scss
+++ b/src/app/core/layout/navbar/navbar.component.scss
@@ -6,7 +6,7 @@ nav {
   align-items: center;
   justify-content: space-between;
   padding: 1rem 1rem;
-  border-bottom: 1px solid #002a4d;
+  box-shadow: 0 2px 2px -2px var(--primary-lighter-color);
 }
 
 .logo {
